<resources>
    <string name="app_name">AvaliacaoPDM</string>
    <string name="action_calculadora">Calculadora</string>
    <string name="action_cad_autor">Cadastro de Autor</string>
    <string name="action_cad_editora">Cadastro de Editora</string>
    <string name="action_cad_livro">Cadastro de Livro</string>
    <string name="action_cad_usuario">Cadastro de Usuário</string>
    <string name="bt_calc_operador_multiplicar">*</string>
    <string name="bt_calc_operador_igual">=</string>
    <string name="bt_calc_operador_somar">+</string>
    <string name="bt_calc_operador_subtracao">-</string>
    <string name="bt_calc_operador_divisao">/</string>
    <string name="bt_calc_operacao_cls">CLS</string>
    <string name="bt_calc_num0">0</string>
    <string name="bt_calc_num1">1</string>
    <string name="bt_calc_num2">2</string>
    <string name="bt_calc_num3">3</string>
    <string name="bt_calc_num4">4</string>
    <string name="bt_calc_num5">5</string>
    <string name="bt_calc_num6">6</string>
    <string name="bt_calc_num7">7</string>
    <string name="bt_calc_num8">8</string>
    <string name="bt_calc_num9">9</string>
    <string name="bt_login_logar">Logar</string>
    <string name="bt_login_sair">Cancelar</string>
    <string name="bt_cada_cadastrar">Cadastrar</string>
    <string name="bt_cada_cancelar">Cancelar</string>
    <string name="bt_cadl_cadastrar">Cadastrar</string>
    <string name="bt_cadl_cancelar">Cancelar</string>
    <string name="bt_cade_cadastrar">Cadastrar</string>
    <string name="bt_cade_cancelar">Cancelar</string>
    <string name="bt_cadu_cadastrar">Cadastrar</string>
    <string name="bt_cadu_cancelar">Cancelar</string>
    <string name="tv_login_usuario">Usuário</string>
    <string name="tv_login_senha">Senha</string>
    <string name="tv_cada_nome">Nome</string>
    <string name="tv_cada_sobrenome">Sobrenome</string>
    <string name="tv_cada_apelido">Apelido</string>
    <string name="tv_cada_data_n">Data de Nascimento</string>
    <string name="tv_cada_editoras">Editoras</string>
    <string name="tv_cada_cpf">CPF</string>
    <string name="tv_cada_rg">RG</string>
    <string name="ent_calculadora_resultado"> </string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="tv_cadl_nome">Nome</string>
    <string name="tv_cadl_sobrenome">Sobrenome</string>
    <string name="ent_nome" />
    <string name="ent_login_usuario" />
    <string name="ent_login_senha" />
    <string name="bt_login_cancelar">Cancelar</string>
    <string name="ent_cadl_nome" />
    <string name="tv_cadl_autor">Autor</string>
    <string name="ent_cadl_autor" />
    <string name="tv_cadl_editora">Editora</string>
    <string name="ent_cadl_editora" />
    <string name="tv_fragmento">fragmento</string>
    <string name="tv_cadl_tipo">Tipo de Obra</string>
    <string name="cb_cadl_tipo">Livro</string>
    <string name="cb_cadl_tipo2">Manga</string>
    <string name="tv_cadl_genero">Genero</string>
    <string name="ent_cadl_genero">Genero</string>
    <string name="tv_cadl_descricao">Descrição</string>


</resources>
