<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:text="@string/tv_cadl_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:id="@+id/tv_cadl_nome"
        android:textSize="36sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/ent_cadl_autor"
        android:ems="10"
        android:id="@+id/ent_cadl_autor"
        android:textSize="36sp"
        android:layout_below="@+id/tv_cadl_autor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tv_cadl_editora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cadl_editora"
        android:textSize="36sp"
        android:layout_below="@+id/ent_cadl_autor"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/ent_cadl_editora"
        android:ems="10"
        android:layout_below="@+id/tv_cadl_editora"
        android:layout_centerHorizontal="true"
        android:id="@+id/ent_cadl_editora"
        android:textSize="36sp" />

    <TextView
        android:text="@string/tv_cadl_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cadl_tipo"
        android:textSize="36sp"
        android:layout_below="@+id/ent_cadl_editora"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:text="@string/cb_cadl_tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/cb_cadl_tipo"
        android:textSize="36sp"
        android:layout_below="@+id/tv_cadl_tipo"
        android:layout_toLeftOf="@+id/tv_cadl_editora"
        android:layout_toStartOf="@+id/tv_cadl_editora"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp" />

    <CheckBox
        android:text="@string/cb_cadl_tipo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb_cadl_tipo2"
        android:textSize="36sp"
        android:layout_alignBaseline="@+id/cb_cadl_tipo"
        android:layout_alignBottom="@+id/cb_cadl_tipo"
        android:layout_toRightOf="@+id/tv_cadl_autor"
        android:layout_toEndOf="@+id/tv_cadl_autor" />

    <TextView
        android:text="@string/tv_cadl_genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cadl_genero"
        android:textSize="36sp"
        android:layout_below="@+id/cb_cadl_tipo2"
        android:layout_alignLeft="@+id/tv_cadl_nome"
        android:layout_alignStart="@+id/tv_cadl_nome" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ent_cadl_genero"
        android:textSize="36sp"
        android:textAlignment="center"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/tv_cadl_genero"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/tv_cadl_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ent_cadl_genero"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_cadl_descricao"
        android:textSize="36sp" />

    <Button
        android:text="@string/bt_cadl_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="99dp"
        android:id="@+id/bt_cadl_cadastrar"
        android:textSize="36sp"
        android:background="@color/botoes_trabalho"
        android:textColor="?android:attr/fastScrollTextColor"
        android:layout_below="@+id/ent_cadl_descricao"
        android:layout_toLeftOf="@+id/tv_cadl_autor"
        android:layout_toStartOf="@+id/tv_cadl_autor" />

    <Button
        android:text="@string/bt_cadl_cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_cadl_cancelar"
        android:textSize="36sp"
        android:background="@color/botoes_trabalho"
        android:textColor="?android:attr/fastScrollTextColor"
        android:layout_alignBaseline="@+id/bt_cadl_cadastrar"
        android:layout_alignBottom="@+id/bt_cadl_cadastrar"
        android:layout_alignLeft="@+id/cb_cadl_tipo2"
        android:layout_alignStart="@+id/cb_cadl_tipo2" />

    <TextView
        android:text="@string/tv_cadl_autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cadl_autor"
        android:textSize="36sp"
        android:layout_marginTop="52dp"
        android:layout_alignTop="@+id/ent_cadl_nome"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ent_cadl_nome"
        android:textSize="36sp"
        android:layout_below="@+id/tv_cadl_nome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ent_cadl_descricao"
        android:textSize="36sp"
        android:layout_below="@+id/tv_cadl_descricao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
